--- a/ToDo
+++ b/ToDo
@@ -1,3 +1,11 @@
 - To Do List -
-sleep
-honda honda
+
+Autoultimate
+Minion E gapclose
+
+
+
+
+- Issues -
+Falsche Range für dritten Q.
+Sehr später q und third q cast
