--- a/ToDo
+++ b/ToDo
@@ -2,11 +2,16 @@
 
 Autoultimate
 Minion E gapclose
-
+beasty combo scenarios
+dodge skills with e
+windwall at % of distance travelled skillshot
+q during ult
+get beasty 100% auto q
 
 
 
 - Issues -
-
+honda ist bei sharp.
+wurde auf bol renamed und heisse net mehr honda 7
 Falsche Range für dritten Q.
 Sehr später q und third q cast
