--- a/ToDo
+++ b/ToDo
@@ -12,7 +12,6 @@ get beasty 100% auto q
 
 - Issues -
 
-honda ist bei sharp.
-wurde auf bol renamed und heisse net mehr honda 7
+castet manchmal random q
 Falsche Range für dritten Q.
 Sehr später q und third q cast
