--- a/ToDo
+++ b/ToDo
@@ -15,4 +15,4 @@ get beasty 100% auto q
 castet manchmal random q
 Falsche Range für dritten Q.
 Sehr später q und third q cast
-magnet funktioniert nur random
+magnet funktioniert super random
