--- a/ToDo
+++ b/ToDo
@@ -1,6 +1,6 @@
 - To Do List -
 
-Autoultimate
+Autoultimate - done
 Minion E gapclose
 beasty combo scenarios
 dodge skills with e
@@ -12,7 +12,7 @@ get beasty 100% auto q
 
 - Issues -
 
-castet manchmal random q
-Falsche Range für dritten Q.
-Sehr später q und third q cast
-magnet funktioniert super random
+castet manchmal random q - done
+Falsche Range für dritten Q. - done
+Sehr später q und third q cast - liegt an prediction
+magnet funktioniert super random - done
